added role parameter for test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,6 +16,9 @@ jwt.lifetime=604800000
 default.admin.login=admin
 default.admin.password=admin
 default.admin.age=22
+default.admin.role=ADMIN
+
 default.user.login=user
 default.user.password=user
 default.user.age=25
+default.user.role=USER
