--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 HELP.md
-target/
+event-manager/target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+.gitattributes
+/event-manager/.gitattributes
+event-manager/mvnw.cmd
+event-manager/.idea
