Notification transmission by kafka has been configured

--- a/event-manager/src/main/resources/application.properties
+++ b/event-manager/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=event-manager
+server.port=8080
 
 server.error.include-message=always
 
@@ -30,3 +31,7 @@ default.user.login=user
 default.user.password=user
 default.user.age=25
 default.user.role=USER
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
