--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
     <modules>
         <module>event-manager</module>
         <module>event-notificator</module>
+        <module>common-dto</module>
     </modules>
 </project>
